--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"></script>
 
 </head>
-<body>
+<body onload="loadingFunc()">
 
+    <div id="preloader"></div>
+    
                     <!-------- Home section start ----------->
 
     <section class="home">
