--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body onload="loadingFunc()">
 
     <div id="preloader"></div>
-    
+
                     <!-------- Home section start ----------->
 
     <section class="home">
@@ -180,8 +180,8 @@
                             </div>
 
                             <div class="below-img-buttons mt-3">
-                                <a class="btn" href="vedant.pdf"> <span></span> Open CV</a>
-                                <a  class="btn" href="#"> <span></span> Hire Me</a>
+                                <a class="btn" href="vedant.pdf" target="__blank"> <span></span> Open CV</a>
+                                <a  class="btn" href="#contactsec"> <span></span> Hire Me</a>
                             </div>
                         </div>
                     </div>
