--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             </div>
 
                             <div class="below-img-buttons mt-3">
-                                <a class="btn" href="vedant.pdf" target="__blank"> <span></span> Open CV</a>
+                                <a class="btn" href="vedant.pdf" target="_blank"> <span></span> Open CV</a>
                                 <a  class="btn" href="#contactsec"> <span></span> Hire Me</a>
                             </div>
                         </div>
