--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- typed.js dyanic text  -->
-    <script src="https://s3.amazonaws.com/myadvobuck/static/libs/typed.min.js"></script>    
+    <!-- <script src="https://s3.amazonaws.com/myadvobuck/static/libs/typed.min.js"></script>    -->
+    <script src="typed.js-master/lib/typed.min.js"></script> 
 
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script> -->
     <script
@@ -43,6 +44,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"></script>
 
+    <meta name="google-site-verification" content="GV5p9Um9JbPISEWW5XaBcJUO244DXYbeBi7knsUfa3c" />
+    
 </head>
 <body onload="loadingFunc()">
 
